# chatbot-plugin-sdk

./: .gitignore  PUBLISH.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md  quickstart.md
docs/api/: backends.md  config.md  exceptions.md  processors.md  providers.md  rate-limit.md
docs/guide/: backends.md  providers.md
docs/superpowers/plans/: 2026-06-13-sdk-refactor.md  2026-06-17-generic-filter-mechanism.md
src/chatbot_plugin_sdk/: __init__.py  base.py  chunking.py  config.py  exceptions.py  ingest.py  protocols.py  query.py  rate_limit.py
src/chatbot_plugin_sdk/backends/: __init__.py  _pg_ddl.py  async_pg.py  base.py  sync_pg.py
src/chatbot_plugin_sdk/contracts/: __init__.py  requests.py  responses.py
src/chatbot_plugin_sdk/models/: __init__.py  article.py  chunk.py
src/chatbot_plugin_sdk/processors/: __init__.py  ingest.py  retrieve.py
src/chatbot_plugin_sdk/providers/: __init__.py  builders.py  endpoint.py  fastembed.py  gemini.py  huggingface.py  local.py
src/chatbot_plugin_sdk/rerankers/: __init__.py  base.py  fastembed.py
src/tests/: test_huggingface_provider.py  test_ingest.py  test_llm_caller.py  test_pg_ddl.py  test_providers.py  test_query.py  test_rate_limit.py  test_rerankers.py  test_retrieve.py  test_service.py
