[project]
name = "chatbot-plugin-sdk"
version = "0.3.0"
description = "Python SDK for the vector storage toolbox — RAG article ingestion and querying"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "httpx",
    "anthropic>=0.50",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_plugin_sdk"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
