[project]
name = "chatbot-plugin-sdk"
version = "0.5.1"
description = "Python SDK for the vector storage toolbox — RAG article ingestion and querying"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "httpx",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3"]
sync = ["psycopg2-binary>=2.9"]
gemini = ["google-genai>=1.0"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_plugin_sdk"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
